# PrsAi_PPT_Translation_MCP

./: README.md
.trae/skills/ppt-translator/: SKILL.md
PrsAiPPT-MCP/: README.md
PrsAiPPT-MCP/src/prs_ai_ppt_mcp/: README.md  server.py
PrsAiPPT-Node-MCP/: README.md  package-lock.json  package.json
PrsAiPPT-Node-MCP/src/: index.ts
PrsAiStaging-MCP/: .env
python-mcp-scaffold/: README.md  pyproject.toml
python-mcp-scaffold/src/my_python_mcp/: __init__.py  server.py
