[project]
name = "my-python-mcp"
version = "0.1.0"
description = "A scaffold for Python MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
my-python-mcp = "my_python_mcp.__main__:main"
